@@ -7,8 +7,8 @@ import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.LongAdder;
 
 public class Main {
 
@@ -19,8 +19,7 @@ public class Main {
         LocalDateTime start = LocalDateTime.now();
 
         try {
-            String content = readAndCleanFile(INPUT_FILE);
-            List<String> topWords = countAndSortWords(content);
+            List<String> topWords = countTopWords();
             printTopWords(topWords);
         } catch (IOException e) {
             System.err.println("Помилка читання файлу: " + e.getMessage());
@@ -29,29 +28,31 @@ public class Main {
 
         LocalDateTime finish = LocalDateTime.now();
         long durationMs = ChronoUnit.MILLIS.between(start, finish);
+
         System.out.println("------");
         System.out.println("Час виконання: " + durationMs + " мс");
     }
 
-    private static String readAndCleanFile(String filePath) throws IOException {
-        String content = new String(Files.readAllBytes(Paths.get(filePath)), StandardCharsets.UTF_8);
-        return content
-                .replaceAll("[^A-Za-z ]", " ")
-                .toLowerCase(Locale.ROOT)
-                .replaceAll("\\s+", " ")
-                .trim();
-    }
+    private static List<String> countTopWords() throws IOException {
+        Map<String, LongAdder> wordCount = new ConcurrentHashMap<>();
 
-    private static List<String> countAndSortWords(String content) {
-        return Arrays.stream(content.split("\\s+"))
+        byte[] bytes = Files.readAllBytes(Paths.get(INPUT_FILE));
+        int start = 0;
+        if (bytes.length >= 3 && bytes[0] == (byte) 0xEF && bytes[1] == (byte) 0xBB && bytes[2] == (byte) 0xBF) {
+            start = 3;
+        }
+        String content = new String(bytes, start, bytes.length - start, StandardCharsets.UTF_8);
+
+        Arrays.stream(content.split("\\s+"))
+                .map(word -> word.replaceAll("[^A-Za-z]", "").toLowerCase(Locale.ROOT))
                 .filter(word -> !word.isEmpty())
-                .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()))
-                .entrySet()
-                .stream()
-                .sorted(Map.Entry.<String, Long>comparingByValue().reversed())
+                .forEach(word -> wordCount.computeIfAbsent(word, k -> new LongAdder()).increment());
+
+        return wordCount.entrySet().stream()
+                .sorted((e1, e2) -> Long.compare(e2.getValue().sum(), e1.getValue().sum()))
                 .limit(TOP_WORDS_COUNT)
-                .map(entry -> entry.getKey() + " " + entry.getValue())
-                .collect(Collectors.toList());
+                .map(e -> e.getKey() + " " + e.getValue().sum())
+                .toList();
     }
 
     private static void printTopWords(List<String> words) {
